day3/workshop03/app2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bggapp-v2-deploy
  labels:
    app: bggapp-v2-deploy
  namespace: bggns
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: bggapp-deploy-v2-po
  template:
    metadata:
      labels:
        app: bggapp-deploy-v2-po
    spec:
      containers:
      - name: bggapp-deploy-v2-po
        image: stackupiss/bgg-backend:v2
        args:
        - --prefix
        - /v2
        ports:
        - containerPort: 3000
