day3/workshop03/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bggapp-svc
  namespace: bggns
  labels:
    name: bggapp-v1-svc
spec:
  selector:
    app: bggapp-deploy-po
  ports:
  - port: 3000
    targetPort: 3000
