day3/workshop03/app2-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bggapp-v2-svc
  namespace: bggns
  labels:
    name: bggapp-v2-svc
spec:
  selector:
    app: bggapp-deploy-v2-po
  ports:
  - port: 3000
    targetPort: 3000
