day3/workshop03/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bggdb-svc
  namespace: bggns
  labels:
    name: bggdb-svc
spec:
  selector:
    app: bggdb-deploy-po
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
