day3/workshop03/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bggapp-ing
  namespace: bggns
spec:
  ingressClassName: nginx
  rules:
  - host: app.163.47.11.239.nip.io
    http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: bggapp-svc
            port:
              number: 3000
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: bggapp-v2-svc
            port:
              number: 3000
